--- a/index.html
+++ b/index.html
@@ -13,18 +13,23 @@
 <body>
   <div class="main">
     <div class="card">
-      Order Summary
+      <div class="headerImage"></div>
+      <h1>Order Summary</h1>
 
-      You can now listen to millions of songs, audiobooks, and podcasts on any
-      device anywhere you like!
+      <p>You can now listen to millions of songs, audiobooks, and podcasts on any
+      device anywhere you like!</p>
 
-      Annual Plan
-      $59.99/year
+      <div class="priceTag">
+        <div class="priceIcon"></div>
+        <div class="priceMain">
+          <h2>Annual Plan</h2>
+          <div class="price">$59.99/year</div>
+        </div>
+        <a>Change</a>
+      </div>
 
-      Change
-
-      Proceed to Payment
-      Cancel Order
+      <button class="proceed">Proceed to Payment</button>
+      <button class="cancel">Cancel Order</button>
     </div>
   </div>
   <div class="attribution">
