--- a/index.html
+++ b/index.html
@@ -14,22 +14,24 @@
   <div class="main">
     <div class="card">
       <div class="headerImage"></div>
-      <h1>Order Summary</h1>
+      <div class="cardContent">
+        <h1>Order Summary</h1>
 
-      <p>You can now listen to millions of songs, audiobooks, and podcasts on any
-      device anywhere you like!</p>
+        <p>You can now listen to millions of songs, audiobooks, and podcasts on any
+        device anywhere you like!</p>
 
-      <div class="priceTag">
-        <div class="priceIcon"></div>
-        <div class="priceMain">
-          <h2>Annual Plan</h2>
-          <div class="price">$59.99/year</div>
+        <div class="priceTag">
+          <div class="priceIcon"></div>
+          <div class="priceText">
+            <h2>Annual Plan</h2>
+            <div class="price">$59.99/year</div>
+          </div>
+          <a>Change</a>
         </div>
-        <a>Change</a>
-      </div>
 
-      <button class="proceed">Proceed to Payment</button>
-      <button class="cancel">Cancel Order</button>
+        <button class="proceed">Proceed to Payment</button>
+        <button class="cancel">Cancel Order</button>
+      </div>
     </div>
   </div>
   <div class="attribution">
