--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
         <div class="priceTag">
           <div class="priceIcon"></div>
           <div class="priceText">
-            <h2>Annual Plan</h2>
+            <div class="priceContent">Annual Plan</div>
             <div class="price">$59.99/year</div>
           </div>
-          <a>Change</a>
+          <div class="priceLink">
+            <a>Change</a>
+          </div>
         </div>
 
         <button class="proceed">Proceed to Payment</button>
