--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <div class="main">
+  <main>
     <div class="card">
       <div class="headerImage"></div>
       <div class="cardContent">
@@ -35,10 +35,10 @@
         <button class="cancel">Cancel Order</button>
       </div>
     </div>
-  </div>
-  <div class="attribution">
+  </main>
+  <footer>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/stanochka">stanochka</a>.
-  </div>
+  </footer>
 </body>
 </html>
